--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Abhshek's Resume</title>
+  <title>Abhishek's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url=https://drive.google.com/file/d/1aelT2sxrzfUvha4uYk51mC_7cuE24bgC/view?usp=sharing&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
