--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Abhishek's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://drive.google.com/file/d/1aelT2sxrzfUvha4uYk51mC_7cuE24bgC/view?usp=sharing&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <embed src="AbhishekResume.pdf" width="800px" height="2100px" />
   </body>
 </html>
