Update portfolio: 12 years of experience and team leadership
- Updated hero subtitle to reflect 12 years experience and team leadership
- Changed about section lead from 5+ to 12 years of experience
- Enhanced about text to highlight career progression to VP
- Added mention of mentoring and engineering organization building
- Updated experience stats from 5+ years to 12+ years
- Enhanced VP role description to emphasize team leadership

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span class="hero-greeting">Welcome</span>
             <span class="hero-name">Abhishek Singh</span>
           </h1>
-          <p class="hero-subtitle">VP Engineering in FinOps | Machine Learning Engineer | Cloud Architect</p>
+          <p class="hero-subtitle">Engineering Leader | 12 Years Experience | Team Builder & Innovator</p>
           <div class="hero-cta">
             <a href="#about" class="btn btn-primary btn-lg">Discover More</a>
             <a href="./AbhiResume.pdf" class="btn btn-outline-primary btn-lg" target="_blank">
@@ -95,15 +95,15 @@
         <div class="about-content">
           <div class="about-text">
             <p class="lead">
-              I'm a results-driven engineering leader with 5+ years of experience building scalable systems and leading high-performing teams.
+              I'm a seasoned engineering leader with 12 years of experience building world-class systems and leading high-performing teams. Currently VP of Engineering in FinOps at JPMorgan Chase.
             </p>
             
             <p>
-              As VP of Engineering in FinOps at JPMorgan Chase, I architect cost optimization solutions leveraging cloud infrastructure, large language models, and data engineering. My focus is delivering maximum value to clients while ensuring operational excellence.
+              With over a decade in software engineering, I've progressed from individual contributor to VP, leading cross-functional teams across multiple domains. At JPMorgan Chase, I architect cost optimization solutions leveraging cloud infrastructure, large language models, and data engineering. I focus on delivering maximum value to clients while ensuring operational excellence and team growth.
             </p>
 
             <p>
-              My expertise spans <strong>full-stack software development</strong>, <strong>cloud-native architecture</strong>, <strong>machine learning systems</strong>, and <strong>team leadership</strong>. I've designed systems handling 200k+ requests per minute and led teams through complex technical transformations.
+              My expertise spans <strong>full-stack software development</strong>, <strong>cloud-native architecture</strong>, <strong>machine learning systems</strong>, <strong>team leadership</strong>, and <strong>engineering organization building</strong>. I've designed systems handling 200k+ requests per minute, led teams through complex technical transformations, and mentored dozens of engineers throughout their careers.
             </p>
 
             <p>
@@ -112,7 +112,7 @@
 
             <div class="about-stats">
               <div class="stat">
-                <h4>5+</h4>
+                <h4>12+</h4>
                 <p>Years Experience</p>
               </div>
               <div class="stat">
@@ -151,7 +151,7 @@
                 <span class="experience-period">Apr 2024 - Present</span>
               </div>
               <p class="experience-description">
-                Leading cost optimization initiatives for JPMorgan's cloud infrastructure. Architected an end-to-end data pipeline synchronizing cost and usage reports, integrated with LLMs to enable intelligent cost analysis for enterprise clients. Technologies: AWS (Glue, S3, Athena, Redshift, Lambda), Python, Step Functions, API Gateway.
+                Leading cost optimization initiatives for JPMorgan's cloud infrastructure. Architected an end-to-end data pipeline synchronizing cost and usage reports, integrated with LLMs to enable intelligent cost analysis for enterprise clients. Leading a high-performing team to deliver innovative solutions that drive business value and operational excellence.
               </p>
               <div class="experience-tags">
                 <span class="tag">Leadership</span>
