Add agentic AI development and architect system design skills

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
               <h4>Data & Machine Learning</h4>
             </div>
             <ul class="skill-list">
+              <li><span class="badge badge-success">Agentic AI Development</span></li>
               <li><span class="badge badge-success">Large Language Models (LLMs)</span></li>
               <li><span class="badge badge-success">PySpark</span></li>
               <li><span class="badge badge-success">Data Engineering</span></li>
@@ -248,8 +249,8 @@
             <ul class="skill-list">
               <li><span class="badge badge-warning">Git & CI/CD</span></li>
               <li><span class="badge badge-warning">Jira & Asana</span></li>
+              <li><span class="badge badge-warning">Architect System Design</span></li>
               <li><span class="badge badge-warning">Contract Testing</span></li>
-              <li><span class="badge badge-warning">System Design</span></li>
               <li><span class="badge badge-warning">Team Leadership</span></li>
               <li><span class="badge badge-warning">Agile/Scrum</span></li>
             </ul>
